Atualização do HTML
Adição de novas informações

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         </section>
         <section class="Sections" id="SectionExperiencia">
             <h1 id="ExperienciaTitulo" class="TituloSection">Experiências</h1>
+            <h1 id="TituloEvo" class="TituloProject">Projeto Evolutech</h1>
+            <p id="AboutEvo" class="PExperiencia">
+                Projeto desenvolvido para a faculdade como trabalho de segundo semestre, neste projeto é usado um CRUD (Create, Read, Update, Delete) para fazer alterações no banco de dados (SQL Server),
+                a linguagem utilizada foi Visual Basic, com o Framework .Net. Programa desenvolvido para uma empresa fictícia que vende produtos eletrônicos.
+            </p>
+
         </section>
 
         <section class="Sections" id="SectionProjetos">
