--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     </head>
     <body>
         <nav id="Menu" class="menu">
-            <button type="button" class="Nav-button" onclick="MenuOpen()">
+            <button type="button" class="Nav-button">
                 <img src="IMG/NavIcon.png" class="ImgButton">
+            </button>
+
+            <button type="button" class="Nav-ThemeButton">
+                <img src="IMG/LightOn.png" id="IdImgTheme" class="ThemeButton">
             </button>
 
             <ul class="navbar" id="NavBarId">
@@ -45,7 +49,7 @@
             <h1 id="TituloNome">VICTOR DE SOUZA</h1>
                 
             <h1 id="SubTitulo">Desenvolvedor de Sistemas</h1>
-            <span id="InicioSpan">MAUÁ - SP, BRASIL - <a href="http://api.whatsapp.com/send?phone=5511986393054" class="Astyle" target="_blank">(11) 98639-3054</a> • <a href="mailto:victors.martins.trabalho@gmail.com" class="Astyle">E-MAIL</a></span>
+            <span id="InicioSpan">MAUÁ - SP, BRASIL - <a href="http://api.whatsapp.com/send?phone=5511986393054" id="AstyleId" class="Astyle" target="_blank">(11) 98639-3054</a> • <a href="mailto:victors.martins.trabalho@gmail.com" class="Astyle">E-MAIL</a></span>
             <div id="SocialIcon">
                 <a class="socialIcon" href="https://www.linkedin.com/in/victor-souza-bb43971a2/" target="_blank">
                     <img class="IconImg" src="IMG/LinkedinIcon.png" title="Linkedin">
