--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <nav id="Menu" class="menu">
-            <button type="button" class="Nav-button">
+            <button type="button" class="Nav-button" id="NavButtonId">
                 <img src="IMG/NavIcon.png" class="ImgButton">
             </button>
 
@@ -21,7 +21,7 @@
             </button>
 
             <ul class="navbar" id="NavBarId">
-                <img src="IMG/FotoPerfil2.jpg" id="img_perfil">
+                <img src="IMG/FotoPerfil.jpg" id="img_perfil">
                 <li class="navItem">
                     <a id="btn_inicio" class="btnMenu" href="#SectionInicio">INICIO</a>
                 </li>
