--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h3 id="SubTituloHabilidades">Linguagens de programação e ferramentas</h3>
             <div id="LinguagensEFerramentas">
                 <img class="IconsFeL" title="C#" alt="C#" src="https://icongr.am/devicon/csharp-original.svg?size=128&color=currentColor">
-                <img class="IconsFeL" title=".NET" alt=".NET" src="/IMG/dotnetIcon.png">
+                <img class="IconsFeL" title=".NET" alt=".NET" src="IMG/dotnetIcon.png">
                 <img class="IconsFeL" title="Visual Basic" alt="Visual Basic" src="https://img.icons8.com/fluency/50/000000/visual-basic.png">
                 <img class="IconsFeL" title="Linux" alt="Linux" src="IMG/LinuxIcon.png">
                 <br>
