--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a class="socialIcon" href="https://www.linkedin.com/in/victor-souza-bb43971a2/" target="_blank">
                     <img class="IconImg" src="IMG/LinkedinIcon.png" title="Linkedin">
                 </a>
-                <a class="socialIcon" href="https://www.instagram.com/__victor.souza__/" target="_blank">
+                <a class="socialIcon" href="https://www.instagram.com/victorsouzzz/" target="_blank">
                     <img class="IconImg" src="IMG/InstagramIcon.png" title="Instagram">
                 </a>
                 <a class="socialIcon"  href="https://github.com/VictorSouza01" target="_blank">
