--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
             <h3 id="SubTituloHabilidades">Linguagens de programação e ferramentas</h3>
             <div id="LinguagensEFerramentas">
                 <img class="IconsFeL" title="C#" alt="C#" src="https://icongr.am/devicon/csharp-original.svg?size=128&color=currentColor">
-                <img class="IconsFeL" title=".NET" alt=".NET" src="/IMG/dotnetIcon.png">
+                <img class="IconsFeL" title=".NET" alt=".NET" src="IMG/dotnetIcon.png">
                 <img class="IconsFeL" title="Visual Basic" alt="Visual Basic" src="https://img.icons8.com/fluency/50/000000/visual-basic.png">
                 <img class="IconsFeL" title="Linux" alt="Linux" src="IMG/LinuxIcon.png">
-                <img class="IconsFeL" title="Linux" alt="Linux" src="https://icongr.am/devicon/java-plain-wordmark.svg?size=148&color=ffffff">
+                <img class="IconsFeL" title="Java" alt="Java" src="https://icongr.am/devicon/java-plain-wordmark.svg?size=148&color=ffffff">
                 <br>
                 <img class="IconsFeL" title="HTML" alt="HTML" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
                 <img class="IconsFeL" title="CSS" alt="CSS" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
